--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=apuser
 spring.datasource.password=everywhere_duck_happened_oh_no
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
+spring.thymleaf.cache=false
